--- a/workspace/NetEaseMusicCracker/res/values/strings.xml
+++ b/workspace/NetEaseMusicCracker/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">NetEastMusicCracker</string>
+    <string name="app_name">NetEaseMusicCracker</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
